 * Added a new Global Operation: change terrain height
   + You can raise (which will only affect lower ground), lower (only affects higher ground) or set the terrain height to a particular height
   + Like the other operations, you can apply this everywhere, or use the filter to apply it only to the selection, or some other condition

-- Version 2.24.0, released 05-04-2025

 * Add Minecraft 1.21 support:
   + Support version 1.20.5 and later with non standard height datapack
   + Add Pale Garden biome
   + Add support for Importing short_grass (note that short grass is still exported as minecraft:grass, in order to support older versions, since Minecraft appears to correct the name upon first loading chunks)
   + Add Hanging Pale Grass, Eyeblossom and Pale Moss Carpet plants
   + Add Pale Moss Block terrain type
   + Add known properties of all new blocks

-- Version 2.23.2, released 20-10-2024

 * Bug fix: fix an error during config file migration. If your configuration was reset due to this error, you can get it back by shutting down WorldPainter, renaming the config.old file to config and restarting WorldPainter

-- Version 2.23.1, released 18-10-2024

 * Bug fix: the terrain panel no longer collapses when there is not enough space for its contents

-- Version 2.23.0, released 18-10-2024

 * Custom Object Layers now have a grid setting, to place objects only on a square grid of configurable size
   + In addition, an optional random displacement from those grid points can be specified for more variation
 * The spawn point can now be in a Custom Cave/Tunnel layer or on a floating dimension
   + Just edit the corresponding floor dimension and then use the Spawn tool to set the spawn point there
   + If the spawn point is moved during a test export because it is outside the selected tiles, it will always be moved to the surface