@@ -5,6 +5,10 @@
  * Added a new Global Operation: change terrain height
    + You can raise (which will only affect lower ground), lower (only affects higher ground) or set the terrain height to a particular height
    + Like the other operations, you can apply this everywhere, or use the filter to apply it only to the selection, or some other condition
+ * Preview of timings feature added
+   + WorldPainter keeps track of how long it takes to perform individual Export stages and Layers
+   + In this preview, the three longest stages or layers will be shown in the summary after the Export is finished
+   + An upcoming release will display the timings in more detail
 
 -- Version 2.24.0, released 05-04-2025
 
